# ipk_project_1

./: .gitignore  Makefile  README.md
headers/: argument_processing.h  error_functions.h  errors.h  ipkcpc.h  list.h
src/: argument_processing.c  error_functions.c  ipkcpc.c  list.c
tests/: CMakeLists.txt  cmd_args_tests.cpp  list_tests.cpp
